# libdap4

./: .cdtproject  .clang-format  .clang-format-ignore  .cproject  .gitallowed  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .project  .travis.yml  .yamllint.yml  3.8.1.diffs  AGENTS.md  AISConnect.cc  AISConnect.h  AISDatabaseParser.cc  AISDatabaseParser.h  AISDatabaseParserTest.cc  AISExceptions.h  AISMerge.cc  AISMerge.h  AISMergeTest.cc  AISResources.cc  AISResources.h  AISResourcesTest.cc  AbstractFunction.cc  AbstractFunction.h  AbstractServerSideFunction.h  AlarmHandler.h  Ancillary.cc  Ancillary.h  Array.cc  Array.h  ArrayGeoConstraint.cc  ArrayGeoConstraint.h  ArrayIterAdapter.cc  ArrayIterAdapter.cc.never  ArrayIterAdapter.h  (+492 more)
d4_ce/: CMakeLists.txt  D4CEDriver.cc  D4CEDriver.h  D4CEScanner.h  D4ConstraintEvaluator.cc  D4ConstraintEvaluator.h  D4FunctionDriver.cc  D4FunctionDriver.h  D4FunctionEvaluator.cc  D4FunctionEvaluator.h  FlexLexer.h  Main.cpp  Makefile  Makefile.am  Makefile.bak  d4_ce_parser.yy  d4_ce_parser.yy.nat_axes  d4_ce_scanner.ll  d4_ce_scanner.ll.nat_axes  d4_function_parser.yy  d4_function_scanner.ll
d4_ce/gen_grammar_sources/: D4CEScanner.h.tmp  D4FunctionScanner.h.tmp  d4_ce_parser.tab.cc.tmp  d4_ce_parser.tab.hh.tmp  d4_function_parser.tab.cc.tmp  d4_function_parser.tab.hh.tmp  lex.d4_ce.cc.tmp  lex.d4_function.cc.tmp  location.hh.tmp  position.hh.tmp  stack.hh.tmp
d4_ce/unit-tests/: CMakeLists.txt  D4ConstraintEvaluatorTest.cc  Makefile.am  test_config.h.in
d4_function/: CMakeLists.txt  D4FunctionEvaluator.cc  D4FunctionEvaluator.h  D4FunctionScanner.h  Makefile.am  d4_function_parser.yy  d4_function_scanner.ll
geo/: CMakeLists.txt  GSEClause.cc  GSEClause.h  Makefile.am  grid_utils.cc  grid_utils.h  gse.ll  gse.yy  gse_parser.h
geo/not_used/: GeoConstraint.cc  GridGeoConstraint.h
http_dap/: BESFileLockingCache.cc  CMakeLists.txt  HTTPCache.cc  HTTPCache.h  HTTPCacheDisconnectedMode.h  HTTPCacheInterruptHandler.h  HTTPCacheMacros.h  HTTPCacheResponse.h  HTTPCacheTable.cc  HTTPCacheTable.h  HTTPConnect.cc  HTTPConnect.h  HTTPResponse.h  Makefile.am  ResponseTooBigErr.cc  ResponseTooBigErr.h  mp_lock_guard.h
http_dap/save/: mp_lock_guard.h
http_dap/unit-tests/: CMakeLists.txt  HTTPCacheTest.cc  HTTPConnectMTTest.cc  HTTPConnectTest.cc  HTTPProcConnectTest.cc  HTTPTestResponse.h  HTTPThreadsConnectTest.cc  Makefile.am  mp_lock_guard_test.cc  parallel_test.sh  parallel_tests.sh  remove_directory.cc  remove_directory.h  run_tests_cppunit.h
http_dap/unused/: HTTPCacheInterruptHandler.h  HTTPCacheMacros.h
regex-0.12/: config.h.in  configure  configure.in  regex.c  regex.h
swath2grid/: AbstractDataset.cpp  AbstractDataset.h  BoundingBox.cpp  DAP_Dataset.cpp  DAP_Dataset.h  Makefile.am  NC_GOES_Dataset.cpp  bes.conf  bes.conf.in  reproj_functions.cc  reproj_functions.h
tests/: AISDatabaseParserTest.cc  AISMergeTest.cc  AISResourcesTest.cc  ArrayTest.cc  AttrTableTest.cc  CMakeLists.txt  D4ResponseBuilder.cc  D4ResponseBuilder.h  D4TestFunction.cc  D4TestFunction.h  D4TestTypeFactory.cc  D4TestTypeFactory.h  DASTest.at  DDSTest.at  DDSTest.cc  DMRTest.at  EXPRTest.at  EXPRTest_new_macros.at  HTTPCacheTest.cc  HTTPConnectTest.cc  LongIterAdapter.cc  LongIterAdapter.h  Makefile.am  Makefile.in  Makefile.in.by_hand  README  ResponseBuilder.cc  ResponseBuilder.h  SignalHandlerTest.cc  TempFile.h  TestArray.cc  TestArray.cc.old  TestArray.h  TestByte.cc  TestByte.h  TestCommon.cc  TestCommon.h  TestD4Enum.cc  TestD4Enum.h  TestD4Group.cc  (+74 more)
tests/ais_testsuite/: ais_database.xml  ais_error_2.xml  ais_error_6.xml  bears_1.nc.das  coads.das  fnoc2_replace.das  fnoc3_fallback.das
tests/cache-testsuite/: cleanup.sh  dot.index
tests/cmake/: das-tests.cmake  dds-tests.cmake  dmr-tests.cmake  expr-tests.cmake  getdap-tests.cmake  python-test-function.cmake.not_used
tests/das-testsuite/: bad_value_test.1  bad_value_test.1.das.base  test.1.das.base  test.11.das.base  test.12.das.base  test.13.das.base  test.14.das.base  test.15.das.base  test.16.das.base  test.17.das.base  test.18.das.base  test.19.das  test.19.das.base  test.1a.das.base  test.2.das.base  test.20.das.base  test.21.das.base  test.22.das.base  test.23.das.base  test.24.das.base  test.25.das  test.25.das.base  test.26.das  test.26.das.base  test.27.das.base  test.28.das  test.28.das.base  test.29  test.29.das  test.29.das.base  test.3.Z.das.base  test.3.das  test.3.das.base  test.30.das  test.30.das.base  test.31.das  test.31.das.base  test.32.das.base  test.33.das.base  test.34.das  (+10 more)
tests/dds-testsuite/: 3B42.980909.5.HDF.das.dds  3B42.980909.5.HDF.dds.base  3B42.980909.5.hacked.HDF.das.dds  3B42.980909.5.hacked.HDF.das.dds.base  AsciiOutputTest1.dds  AsciiOutputTest1.dds.base  S2000415.HDF.das.dds  S2000415.HDF.dds.base  fnoc1.nc.das.dds  fnoc1.nc.dds.base  test.1.dds.base  test.10.dds.base  test.11.dds.base  test.12.dds.base  test.13.dds.base  test.14.dds.base  test.15.dds.base  test.16.dds.base  test.17.dds.base  test.18.dds.base  test.19.dds.base  test.19b.das.dds.base  test.19b.dds.base  (+18 more)
ugridFunctions/: LocationType.h  Makefile.am  MeshDataVariable.cc  MeshDataVariable.h  TwoDMeshTopology.cc  TwoDMeshTopology.h  gf2.cc  gf2.h  gf3.cc  gf3.h  ugrid_utils.cc  ugrid_utils.h
unit-tests/: .dodsrc  AISDatabaseParserTest  AISDatabaseParserTest.cc  AISMergeTest  AISMergeTest.cc  AISResourcesTest  AISResourcesTest.cc  ArrayGeoConstraintTest  ArrayGeoConstraintTest.cc  ArrayTest  ArrayTest.cc  AttrTableTest  AttrTableTest.cc  BaseTypeFactoryTest.cc  BaseTypeTest.cc  BigArrayTest.cc  ByteTest  ByteTest.cc  CEFunctionsTest  CEFunctionsTest.cc  CMakeLists.txt  ConstraintEvaluatorTest.cc  D4AsyncDocTest.cc  D4AttributesTest.cc  D4BaseTypeFactoryTest.cc  D4DimensionsTest.cc  D4EnumDefsTest.cc  D4EnumTest.cc  D4FilterClauseTest.cc  D4FliterClauseTest.cc  D4GroupTest.cc  D4MarshallerTest.cc  D4ParserSax2Test.cc  D4SequenceTest.cc  D4StreamRoundTripTest.cc  D4UnMarshallerTest.cc  DAP4MarshallerTest.cc  DAP4UnMarshallerTest.cc  DAPCache3Test.cc  DASTest  (+93 more)
(+5387 files in other folders)
